--- a/static/css/master.css
+++ b/static/css/master.css
@@ -1,7 +1,8 @@
-* {
-    /* old-style reset here :) */
-    border: 0px;
-    padding: 0px;
+html {
+    font-family: sans-serif;
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -9,6 +10,7 @@ body {
     background: white;
     text-align: center;
     background: url(../img/body.png) repeat-x;
+    padding-top: 56px;
 }
 
 body h1 {
@@ -26,9 +28,9 @@ table {
 }
 
 td, th {
-    width: 81px;
-    height: 81px;
-    text-align: center;
+    width: 125px;
+    height: 125px;
+    text-align: center !important;
     vertical-align: middle;
     background: url(../img/cells.png);
     color: #444;
@@ -41,30 +43,38 @@ th {
     font-size: 14px;
 }
 
+td {
+    height: 125px;
+}
+
 th.month {
-    background: url(../img/calpad.jpg);
+    background: url(../img/calpad.png) repeat-x;
+    text-align: center;
+    height: 30px;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 td:hover, th:hover {
-    background-position: 0px -81px;
+    background-position: 0px -125px;
     color: #222;
 }
 
 td.date_has_event {
-    background-position: 162px 0px;
+    background-position: 250px 0px;
     color: white;
 }
 
 td.date_has_event:hover {
-    background-position: 162px -81px;
+    background-position: 250px -125px;
 }
 
 td.padding {
-    background: url(../img/calpad.jpg);
+    background: url(../img/calpad.png);
 }
 
 td.today {
-    background-position: 81px 0px;
+    background-position:125px 0px;
     color: white;
 }
 
@@ -73,7 +83,7 @@ td.sun {
 }
 
 td.today:hover {
-    background-position: 81px -81px;
+    background-position: 125px -125px;
 }
 
 .events {
@@ -114,4 +124,22 @@ td.today:hover {
 .events li span.title {
     font-weight: bold;
     color: #222;
+}
+
+ul {
+    padding: 0px 5px 0px 20px ;
+}
+
+a.date {
+    color: #17a2b8 !important;
+    text-decoration: none !important; /* Отменяем подчеркивание у ссылки */
+    line-height: 75px;
+    display: inline-block;
+    height: 75px;
+    padding: 0 30px;
+}
+
+span.date {
+    display: block;
+    text-align: center;
 }
