--- a/cal/templates/cal/base.html
+++ b/cal/templates/cal/base.html
@@ -1,18 +1,74 @@
 <!DOCTYPE html>
+
 {% load static %}
+
 <html lang="en">
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <script src="{% static 'js/jquery-1.3.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/coda.js' %}" type="text/javascript"></script>
     <link rel="stylesheet" href="{% static 'css/master.css' %}" type="text/css" media="screen" charset="utf-8"/>
-</head>
-<body>
+    <link href="{% static 'css/authapp.css' %}" rel="stylesheet"/>
 
-    {% block content %}
-
+    {% block title %}
+        <title>{{ title|title }}</title>
     {% endblock %}
 
+    {% block css %}
+
+    {% endblock %}
+    <script type="text/javascript">
+        $(function () {
+            $('#datetimepicker12').datetimepicker({
+                inline: true,
+                sideBySide: true,
+                format: 'DD.MM.YYYY' /*remove this line if you want to use time as well */
+            });
+        });
+    </script>
+</head>
+
+<body>
+
+{% include 'cal/includes/navbar.html' %}
+
+{% if  messages %}
+    <div class="alert {% if messages == messages.SUCCESS %} alert-success  {% else %} alert-warning  {% endif %} alert-dismissible fade show"
+         role="alert"
+         style="margin-top: 50px;">
+        {% if messages %}
+            {% for messag in messages %}
+                {{ messag }}
+            {% endfor %}
+        {% else %}
+            {% for error in errors %}
+                {{ error }}
+            {% endfor %}
+        {% endif %}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+{% endif %}
+
+{% block content %}
+
+{% endblock %}
+
+
+<!-- Bootstrap core JavaScript -->
+<script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+<!-- FontAwesome script -->
+<script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
+
+<script src="{% static 'js/jquery.formset.js' %}"></script>
 </body>
+
+
 </html>
