--- a/cal/templates/cal/calendar.html
+++ b/cal/templates/cal/calendar.html
@@ -1,5 +1,11 @@
 {% extends 'cal/base.html' %}
 
-{% block content %}
-    {{ calendar }}
-{% endblock %}
+<div class="container">
+    <div class="row">
+
+        {% block content %}
+            {{ calendar }}
+        {% endblock %}
+
+    </div>
+</div>
