--- a/static/css/master.css
+++ b/static/css/master.css
@@ -143,3 +143,22 @@ span.date {
     display: block;
     text-align: center;
 }
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.btn {
+  outline: none;
+  color: black;
+  background-color: transparent;
+  box-shadow: 0 0 0 0;
+}
+
+.clearfix {
+  margin: 15px;
+}
