--- a/cal/templates/cal/calendar.html
+++ b/cal/templates/cal/calendar.html
@@ -1,11 +1,11 @@
 {% extends 'cal/base.html' %}
 
-<div class="container">
-    <div class="row">
-
-        {% block content %}
-            {{ calendar }}
-        {% endblock %}
-
+{% block content %}
+    <div class="clearfix">
+        <a class="btn btn-info left" href="{% url 'event:calendar' prev_month %}"> Прошлый месяц </a>
+        <a class="btn btn-info right" href="{% url 'event:calendar' next_month %}"> Следующий месяц </a>
+        <a class="btn btn-info right" href="{% url 'event:new_event' %}"> Новое событие </a>
     </div>
-</div>
+
+    {{ calendar }}
+{% endblock %}
