--- a/cal/templates/cal/event-update-detele.html
+++ b/cal/templates/cal/event-update-detele.html
@@ -2,10 +2,9 @@
 {% block content %}
     <main>
         <div class="container-fluid">
-            <h1 class="mt-4">Создание события</h1>
-            <form action="{% url 'event:new_event' %}" method="post" enctype="multipart/form-data">
+            <h1 class="mt-4">Редактирование события</h1>
+            <form action="{% url 'event:event_edit' event.pk %}" method="post">
                 {% csrf_token %}
-
                 <div class="form-row">
                     <div class="col-lg-6">
                         <div class="form-group">
@@ -33,6 +32,17 @@
                     </div>
                 </div>
             </form>
+
+            <form action="{% url 'event:event_delete' event.pk %}" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-lg-12" style="margin-top: 33px;">
+                        <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                    </div>
+                </div>
+            </form>
+
+
         </div>
     </main>
 {% endblock %}
